# lakers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  Cargo.toml  LICENSE.md  README.md  build_for_c.sh  build_static_lib.sh  edhoc_consts.h  edhoc_rs.h  rust-toolchain
.cargo/: config.toml
.github/: release.yml
.github/workflows/: actions.yml  bloat.yml  build-and-test.yml  check-style.yml  generate-fstar.yml  python-wheels.yml  rust.yml
consts/: Cargo.toml  build.rs  cbindgen.toml
consts/src/: crypto.rs  lib.rs
crypto/: Cargo.toml
crypto/edhoc-crypto-cc2538/: Cargo.toml
crypto/edhoc-crypto-cc2538/.cargo/: config.toml
crypto/edhoc-crypto-cc2538/src/: lib.rs
crypto/edhoc-crypto-cryptocell310-sys/: Cargo.toml  build.rs
crypto/edhoc-crypto-cryptocell310-sys/src/: lib.rs
crypto/edhoc-crypto-hacspec/: Cargo.toml
crypto/edhoc-crypto-hacspec/src/: lib.rs
crypto/edhoc-crypto-mbedtls/: Cargo.toml
crypto/edhoc-crypto-mbedtls/src/: lib.rs
crypto/edhoc-crypto-psa/: Cargo.toml
crypto/edhoc-crypto-psa/src/: lib.rs
crypto/edhoc-crypto-rustcrypto/: Cargo.toml
crypto/edhoc-crypto-rustcrypto/src/: lib.rs
crypto/edhoc-crypto-trait/: Cargo.toml
crypto/edhoc-crypto-trait/src/: lib.rs
crypto/lakers-crypto-cc2538/: Cargo.toml
crypto/lakers-crypto-cc2538/src/: lib.rs
crypto/lakers-crypto-cryptocell310-sys/: Cargo.toml  build.rs
crypto/lakers-crypto-cryptocell310-sys/src/: lib.rs
crypto/lakers-crypto-cryptocell310-sys/src/c/: wrapper.h
crypto/lakers-crypto-hacspec/: Cargo.toml
crypto/lakers-crypto-hacspec/src/: lib.rs
crypto/lakers-crypto-psa/: Cargo.toml
crypto/lakers-crypto-psa/src/: lib.rs
crypto/lakers-crypto-rustcrypto/: Cargo.toml
crypto/lakers-crypto-rustcrypto/src/: lib.rs
crypto/src/: lib.rs
ead/: Cargo.toml
ead/edhoc-ead-none/: Cargo.toml
ead/edhoc-ead-none/src/: lib.rs
ead/edhoc-ead-zeroconf/: Cargo.toml
ead/edhoc-ead-zeroconf/src/: lib.rs
ead/lakers-ead-authz/: Cargo.toml  cbindgen.toml
ead/lakers-ead-authz/src/: authenticator.rs  device.rs  initiator.rs  lib.rs  responder.rs  server.rs  shared.rs  test_vectors.rs
ead/lakers-ead-none/: Cargo.toml
ead/lakers-ead-none/src/: lib.rs
ead/lakers-ead-zeroconf/: Cargo.toml
ead/src/: lib.rs
examples/: coapclient.rs  test-vectors-playground.ipynb  traces-zeroconf.ipynb
examples/c-wrapper-riot/: Makefile  README.md  main.c
examples/cc2538-edhoc/: Cargo.toml  flash.sh  gdb.sh  gdb_commands.gdb  jlink_commands.jlink  jlink_server.sh  rtt.sh  sections_remote.x
examples/cc2538-edhoc/.cargo/: config.toml
examples/cc2538-edhoc/src/: consts.rs  lib.rs  main.rs
examples/coap/: Cargo.toml
examples/coap-riot/: .gitignore  Cargo.toml  Makefile  README.md
examples/coap-riot/src/: lib.rs
examples/edhoc-rs-cc2538/: Cargo.toml  flash.sh
examples/edhoc-rs-cc2538/.cargo/: config.toml
examples/edhoc-rs-cc2538/src/: main.rs
examples/edhoc-rs-no_std/: Cargo.toml  Embed.toml  README.md
examples/edhoc-rs-no_std/src/: main.rs
examples/edhoc-rs-nrf52840/: Embed.toml
examples/lakers-c-native/: .gitignore  Makefile  README.md  main.c
examples/lakers-c-riot/: Makefile  README.md  main.c
examples/lakers-cc2538/: Cargo.toml  memory.x
examples/lakers-cc2538/src/: main.rs
examples/lakers-ffi-native/: .gitignore  Makefile  main.c
examples/lakers-ffi-riot/: Makefile  README.md  main.c
examples/lakers-no_std/: Cargo.toml  README.md  build.rs
examples/lakers-no_std/.cargo/: config.toml
examples/lakers-no_std/src/: main.rs
examples/lakers-nrf52840/: Cargo.toml  README.md
examples/lakers-nrf52840/.cargo/: config.toml
hacspec/: Cargo.toml  adjust_features_for_hax.patch
hacspec/src/: consts.rs  lib.rs
include/: edhoc_consts.h  edhoc_rs.h
lakers-c/: Cargo.toml  README.md  build.sh  cbindgen.toml
lakers-c/src/: ead_authz.rs  initiator.rs  lib.rs
lakers-ffi/: Cargo.toml  cbindgen.toml
lakers-ffi/src/: ead_authz.rs  initiator.rs  lib.rs
lakers-python/: Cargo.toml  README.md  pyproject.toml  test_requirements.txt
lakers-python/doc/: conf.py  index.rst
lakers-python/src/: initiator.rs  lib.rs  responder.rs
lakers-python/src/ead_authz/: authenticator.rs  device.rs  mod.rs  server.rs
lakers-python/test/: test_ead_authz.py  test_lakers.py
lib/: Cargo.toml  README.md  build.rs  cbindgen.toml
lib/examples/: coapclient.rs  coapserver.rs
lib/examples/cc2538-edhoc/: jlink_server.sh
lib/examples/cc2538-edhoc/src/: main.rs
lib/proofs/fstar/extraction/: Makefile
lib/src/: c_wrapper.rs  consts.rs  ead_zeroconf.rs  edhoc.rs  lib.rs
shared/: Cargo.toml  README.md  cbindgen.toml
shared/src/: buffer.rs  cred.rs  cred_new.rs  crypto.rs  ffi.rs  lib.rs  python.rs  python_bindings.rs
src/: accelerator.rs  consts.rs  edhoc.rs  lib.rs  main.rs
src/hacspec/: mod.rs
src/rust/: accelerator.rs  mod.rs
tests/: edhoc.rs
