[workspace]

members = [
  "lib",
  "ead",
  "ead/edhoc-ead-none",
  "ead/edhoc-ead-zeroconf",
  "crypto",
  "crypto/edhoc-crypto-cc2538",
  "crypto/edhoc-crypto-hacspec",
  "crypto/edhoc-crypto-psa",
  "crypto/edhoc-crypto-rustcrypto",
  "crypto/edhoc-crypto-cryptocell310-sys",
  "examples/coap",
  "examples/edhoc-rs-no_std",
  "examples/edhoc-rs-cc2538",
]

# reduced "default-members", should include only packages that can be built and
# tested on the host architecture
default-members = [
  "lib",
  "ead",
  "crypto",
  "crypto/edhoc-crypto-hacspec",
  "examples/coap",
]

# according to https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html,
# this needs to be explicitly set if using virtual manifests (like this).
# We need this so dependency crates use it *in all cases*.
# Specifically, `psa-crypto` merges build-dependency and regular dependency
# features without this, causing forced "std" in downstream crate.
resolver = "2"

[workspace.package]
version = "0.4.0-alpha.1"
repository = "https://github.com/openwsn-berkeley/edhoc-rs/"
license = "BSD-3-Clause"

[workspace.dependencies]

edhoc-consts = { path = "consts/", version = "^0.4.0-alpha.1" }
edhoc-ead = { path = "ead/", version = "^0.4.0-alpha.1", default-features = false }
edhoc-ead-none = { path = "ead/edhoc-ead-none/", version = "^0.4.0-alpha.1" }
edhoc-ead-zeroconf = { path = "ead/edhoc-ead-zeroconf/", version = "^0.4.0-alpha.1" }
edhoc-crypto = { path = "crypto/", version = "^0.4.0-alpha.1" }

edhoc-crypto-cc2538 = { path = "crypto/edhoc-crypto-cc2538/", version = "^0.4.0-alpha.1" }
edhoc-crypto-cryptocell310 = { path = "crypto/edhoc-crypto-cryptocell310-sys/", version = "^0.4.0-alpha.1" }
edhoc-crypto-hacspec = { path = "crypto/edhoc-crypto-hacspec/", version = "^0.4.0-alpha.1" }
edhoc-crypto-psa = { path = "crypto/edhoc-crypto-psa/", version = "^0.4.0-alpha.1" }
edhoc-crypto-rustcrypto = { path = "crypto/edhoc-crypto-rustcrypto/", version = "^0.4.0-alpha.1" }

edhoc-rs = { path = "lib/", version = "^0.4.0-alpha.1", default-features = false }

[patch.crates-io]
hacspec-lib = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-p256 = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-hkdf = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-sha256 = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-aes = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-aes-ccm = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
psa-crypto = { git = "https://github.com/geonnave/rust-psa-crypto", branch = "have-no-std-and-baremetal-features" }
