[workspace]

members = [
  "lib",
  "ead",
  "ead/lakers-ead-none",
  "ead/lakers-ead-zeroconf",
  "ead/lakers-ead-authz",
  "crypto",
  "crypto/lakers-crypto-cc2538",
  "crypto/lakers-crypto-hacspec",
  "crypto/lakers-crypto-psa",
  "crypto/lakers-crypto-rustcrypto",
  "crypto/lakers-crypto-cryptocell310-sys",
  "examples/coap",
  "examples/edhoc-rs-no_std",
  "examples/edhoc-rs-cc2538",
]

# reduced "default-members", should include only packages that can be built and
# tested on the host architecture
default-members = [
  "lib",
  "ead",
  "crypto",
  "crypto/lakers-crypto-hacspec",
  "examples/coap",
]

# according to https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html,
# this needs to be explicitly set if using virtual manifests (like this).
# We need this so dependency crates use it *in all cases*.
# Specifically, `psa-crypto` merges build-dependency and regular dependency
# features without this, causing forced "std" in downstream crate.
resolver = "2"

[workspace.package]
version = "0.4.1"
repository = "https://github.com/openwsn-berkeley/edhoc-rs/"
license = "BSD-3-Clause"

[workspace.dependencies]

lakers-shared = { package = "lakers-shared", path = "shared/", version = "^0.4.1" }
lakers-ead = { package = "lakers-ead-dispatch", path = "ead/", version = "^0.4.1", default-features = false }
lakers-ead-none = { package = "lakers-ead-none", path = "ead/lakers-ead-none/", version = "^0.4.1" }
lakers-ead-zeroconf = { package = "lakers-ead-zeroconf", path = "ead/lakers-ead-zeroconf/", version = "^0.4.1" }
lakers-ead-authz = { package = "lakers-ead-authz", path = "ead/lakers-ead-authz/", version = "^0.4.1" }
lakers-crypto = { path = "crypto/" }

lakers-crypto-cc2538 = { path = "crypto/lakers-crypto-cc2538/" }
lakers-crypto-cryptocell310 = { path = "crypto/lakers-crypto-cryptocell310-sys/" }
lakers-crypto-hacspec = { path = "crypto/lakers-crypto-hacspec/" }
lakers-crypto-psa = { path = "crypto/lakers-crypto-psa/" }
lakers-crypto-rustcrypto = { package = "lakers-crypto-rustcrypto", path = "crypto/lakers-crypto-rustcrypto/", version = "^0.4.1" }

edhoc-rs = { package = "lakers", path = "lib/", version = "^0.4.1", default-features = false }

[patch.crates-io]
hacspec-lib = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-p256 = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-hkdf = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-sha256 = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-aes = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
hacspec-aes-ccm = { git = "https://github.com/malishav/hacspec", branch = "aesccm" }
psa-crypto = { git = "https://github.com/malishav/rust-psa-crypto", branch = "baremetal" }
