[workspace]

members = [
  "lib",
  "ead",
  "ead/lakers-ead-authz",
  "crypto",
  "crypto/lakers-crypto-psa",
  "crypto/lakers-crypto-rustcrypto",
  "crypto/lakers-crypto-cryptocell310-sys",
  "examples/coap",
  "examples/lakers-no_std",
  "lakers-c",
  "lakers-python",
]

# reduced "default-members", should include only packages that can be built and
# tested on the host architecture
default-members = [
  "lib",
  "ead",
  "crypto",
  "crypto/lakers-crypto-rustcrypto",
  "examples/coap",
]

# according to https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html,
# this needs to be explicitly set if using virtual manifests (like this).
# We need this so dependency crates use it *in all cases*.
# Specifically, `psa-crypto` merges build-dependency and regular dependency
# features without this, causing forced "std" in downstream crate.
resolver = "2"

[workspace.package]
version = "0.5.1"
repository = "https://github.com/openwsn-berkeley/lakers/"
license = "BSD-3-Clause"
readme = "shared/README.md"

[workspace.dependencies]

lakers-shared = { package = "lakers-shared", path = "shared/", version = "^0.5.1" }

lakers-ead = { package = "lakers-ead", path = "ead/", version = "^0.5.1", default-features = false }
lakers-ead-authz = { package = "lakers-ead-authz", path = "ead/lakers-ead-authz/", version = "^0.5.1" }

lakers-crypto = { path = "crypto/" }
lakers-crypto-cryptocell310 = { path = "crypto/lakers-crypto-cryptocell310-sys/" }
lakers-crypto-psa = { path = "crypto/lakers-crypto-psa/" }
lakers-crypto-rustcrypto = { package = "lakers-crypto-rustcrypto", path = "crypto/lakers-crypto-rustcrypto/", version = "^0.5.1" }

lakers = { package = "lakers", path = "lib/", version = "^0.5.1", default-features = false }

[patch.crates-io]
psa-crypto = { git = "https://github.com/malishav/rust-psa-crypto", branch = "baremetal" }
