[package]
name = "edhoc-consts"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC crypto library"

[dependencies]
hacspec-lib = { version = "0.1.0-beta.1", default-features = false, optional = true }

[features]
default = [ "hacspec" ]
hacspec = [ "hacspec-lib/alloc" ]
rust = [ ]
