[package]
name = "edhoc-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC crypto library dispatch crate"

[dependencies]
edhoc-consts = { path = "../consts", version = "0.1.0", default-features = false }

# hacspec
edhoc-crypto-hacspec = { path = "./edhoc-crypto-hacspec", version = "0.1.0", optional = true }

# cc2538 hardware accelerated
edhoc-crypto-cc2538 = { path = "./edhoc-crypto-cc2538", version = "0.1.0", optional = true }

# psa
edhoc-crypto-psa = { path = "./edhoc-crypto-psa", version = "0.1.0", default-features = false, optional = true }

# cryptocell for nrf52840
edhoc-crypto-cryptocell310 = { path = "./edhoc-crypto-cryptocell310-sys", version = "0.1.0", optional = true }

[features]
default = [  ]
hacspec = [ "edhoc-crypto-hacspec" ]
cc2538 = [ "edhoc-crypto-cc2538" ]
psa = [ "edhoc-crypto-psa/hacspec" ]
psa-baremetal = [ "psa", "edhoc-crypto-psa/baremetal" ]
psa-rust = [ "edhoc-crypto-psa/rust" ]
psa-rust-baremetal = [ "psa-rust", "edhoc-crypto-psa/baremetal" ]
cryptocell310 = [ "edhoc-crypto-cryptocell310/hacspec" ]
cryptocell310-rust = [ "edhoc-crypto-cryptocell310/rust" ]
