[package]
name = "edhoc-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC crypto library dispatch crate"

[dependencies]
edhoc-consts = { path = "../consts", default-features = false }

edhoc-crypto-trait.path = "./edhoc-crypto-trait"

# hacspec
edhoc-crypto-hacspec = { path = "./edhoc-crypto-hacspec", optional = true }

# cc2538 hardware accelerated
edhoc-crypto-cc2538 = { path = "./edhoc-crypto-cc2538", optional = true }

# psa
edhoc-crypto-psa = { path = "./edhoc-crypto-psa", default-features = false, optional = true }

# cryptocell for nrf52840
edhoc-crypto-cryptocell310 = { path = "./edhoc-crypto-cryptocell310-sys", optional = true }

# software implementations from rustcrypto
edhoc-crypto-rustcrypto = { path = "./edhoc-crypto-rustcrypto", optional = true }
rand_core = { version = "0.6.4", optional = true, default-features = false }

[features]
default = [  ]
hacspec = [ "edhoc-crypto-hacspec" ]
cc2538 = [ "edhoc-crypto-cc2538" ]
psa = [ "edhoc-crypto-psa" ]
psa-baremetal = [ "psa", "edhoc-crypto-psa/baremetal" ]
cryptocell310 = [ "edhoc-crypto-cryptocell310" ]
# This requires std because we need to conjure randomness from thin air;
# embedded systems can still use rustcrypto but need to provide a crypto from
# edhoc-crypto-rustcrypto on their own, and combine it with an entropy choice
# of their avail.
rustcrypto = [ "edhoc-crypto-rustcrypto", "rand_core/getrandom" ]
