[package]
name = "lakers-ead-dispatch"
version.workspace = true
edition = "2021"
authors = ["Geovane Fedrecheski <geonnave@gmail.com>"]
license.workspace = true
description = "EDHOC EAD library dispatch crate"
repository.workspace = true

[dependencies]
lakers-shared.workspace = true

lakers-ead-none = { workspace = true, optional = true }
lakers-ead-zeroconf = { workspace = true, optional = true }

[features]
default = [ "ead-none" ]
ead-none = [ "lakers-ead-none" ]
ead-zeroconf = [ "lakers-ead-zeroconf" ]
