[package]
name = "edhoc-hacspec"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC implementation"

[dependencies]
hacspec-lib = { git = "https://github.com/malishav/hacspec", branch="aesccm", default-features = false }
edhoc-crypto = { path = "../crypto" }
edhoc-consts = { path = "../consts" }

