[package]
name = "edhoc-hacspec"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC implementation"

[dependencies]
hacspec-lib = { version = "0.1.0-beta.1", default-features = false, features = [ "alloc" ] }
edhoc-crypto = { path = "../crypto", default-features = false }
edhoc-consts = { path = "../consts" }

