[package]
name = "edhoc-hacspec"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC implementation"

[dependencies]
hacspec-lib = { version = "0.1.0-beta.1", default-features = false, features = [ "alloc" ] }
edhoc-crypto = { path = "../crypto", version = "0.1.0", default-features = false }
edhoc-ead = { path = "../ead", version = "0.1.0", default-features = false }
edhoc-consts = { path = "../consts", version = "0.1.0" }

[features]
default = [ "edhoc-ead/edhoc-ead-none" ]
ead-none = [ "edhoc-ead/edhoc-ead-none" ]
ead-zeroconf = [ "edhoc-ead/edhoc-ead-zeroconf" ]
