[package]
name = "lakers"
version.workspace = true
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license.workspace = true
description = "An implementation of EDHOC (RFC 9528)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lakers-shared.workspace = true

log = "0.4"

[dev-dependencies]
lakers-ead-authz = { workspace = true }
lakers-crypto.workspace = true
hexlit = "0.5.3"

[features]
# NOTE: the ead features are just needed for multiplexing tests
default = [ "test-ead-none" ]
test-ead-none = [ ]
test-ead-authz = [ ]

[lib]
crate-type = ["rlib"]
