[package]
name = "lakers-shared"
version.workspace = true
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license.workspace = true
description = "EDHOC crypto library constants crate"
repository.workspace = true
# It's implied, but still better for consistency to have it explicit.
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
hex = { version = "0.4.3", optional = true }
defmt-or-log = { version = "0.2.1", default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
hexlit = "0.5.3"
rstest = "0.21.0"

[features]
default = [  ]
python-bindings = ["pyo3", "hex"]

## For all arbitrarily limited buffers, pick 4x the current default.
##
## On the long run, this might be replaced with a more fine-grained feature set
## picking the minimum size of all the items, or even an option to generalize,
## but this provides an easy way to allow unconstrained systems to stomach
## larger sizes (especially for experimentation) without making sizes explode
## on embedded.
quadruple_sizes = []

## Precise control of `MAX_MESSAGE_SIZE_LEN`.
##
## If any of those is set, they override the default of 192 (as well as
## `quadruple_sizes`). If multiple are set, the highest wins.

max_message_size_len_256 = []
max_message_size_len_320 = []
max_message_size_len_384 = []
max_message_size_len_448 = []
max_message_size_len_512 = []
