[package]
name = "edhoc-crypto-cc2538"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC crypto library cc2538 backend"

[dependencies]
edhoc-consts = { path = "../../consts", version = "0.1.0" }
hacspec-lib = { version = "0.1.0-beta.1", default-features = false, features = [ "alloc" ] }
cortex-m = { version = "0.7.4" }
cortex-m-rt = { version = "0.7.1" }
cortex-m-semihosting = { version = "0.5.0" }
panic-semihosting = { version = "0.6.0", features = ["exit"] }
cc2538-pac = { version = "0.1.0", features = ["rt"] }
cc2538-hal = { git = "https://github.com/thvdveld/cc2538-hal/", branch = "crypto" }

# depend on an allocator
static-alloc = { version = "0.2.3", optional = true }
