[package]
name = "edhoc-crypto-cryptocell310"
version.workspace = true
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "ARM CryptoCell 310 sys crate"
links = "nrf_cc310_0.9.13"
repository.workspace = true

[dependencies]
edhoc-consts.workspace = true

[build-dependencies]
bindgen = "0.63.0"
