[package]
name = "edhoc-crypto-cryptocell310"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "ARM CryptoCell 310 sys crate"
links = "nrf_cc310_0.9.13"

[dependencies]
edhoc-consts = { path = "../../consts" }

[build-dependencies]
bindgen = "0.69.1"
