[package]
name = "edhoc-crypto-hacspec"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC crypto library hacspec backend"

[dependencies]
edhoc-consts = { path = "../../consts", default-features = false, features = ["hacspec"] }
hacspec-lib = { version = "0.1.0-beta.1", default-features = false }
hacspec-p256 = { version = "0.1.0" }
hacspec-hkdf = { version = "0.1.0" }
hacspec-sha256 = { version = "0.1.0" }
hacspec-aes = { version = "0.1.0" }
hacspec-aes-ccm = { version = "0.1.0" }
rand = "0.8.5"