[package]
name = "edhoc-crypto-psa"
version = "0.1.0"
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
license = "BSD"
description = "EDHOC crypto library PSA backend"

[dependencies]
edhoc-consts = { path = "../../consts" }
edhoc-crypto-trait.path = "../edhoc-crypto-trait"
psa-crypto = { version = "0.9.2" }

[features]
baremetal = [ "psa-crypto/baremetal" ]
