[package]
name = "edhoc-crypto-psa"
version.workspace = true
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
license = "BSD"
description = "EDHOC crypto library PSA backend"
repository.workspace = true

[dependencies]
edhoc-consts.workspace = true
psa-crypto = { version = "0.9.2" }

[features]
baremetal = [ "psa-crypto/baremetal" ]
