[package]
name = "edhoc-crypto-psa"
version.workspace = true
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
license.workspace = true
description = "EDHOC crypto library PSA backend"
repository.workspace = true

[dependencies]
edhoc-consts.workspace = true
psa-crypto = { version = "0.12.0" }
p256 = { version = "0.13.2", default-features = false, features = [ "ecdh" ] }

[features]
baremetal = [ "psa-crypto/baremetal" ]
