[package]
name = "edhoc-crypto-rustcrypto"
version = "0.1.0"
edition = "2021"
license = "BSD"
description = "EDHOC crypto library backend based on the RustCrypto crates"

[dependencies]
edhoc-consts = { path = "../../consts" }

aead = { version = "0.5.2", default-features = false }
aes = { version = "0.8.3", default-features = false }
ccm = { version = "0.5.0", default-features = false }
hkdf = { version = "0.12.3", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = [ "ecdh" ] }
sha2 = { version = "0.10.8", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
