[package]
name = "lakers-crypto-cc2538"
version.workspace = true
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license.workspace = true
description = "EDHOC crypto library cc2538 backend"
repository.workspace = true
readme.workspace = true

[dependencies]
lakers-shared.workspace = true
hacspec-lib = { version = "0.1.0-beta.1", default-features = false, features = [ "alloc" ] }
cortex-m = { version = "0.7.4" }
cortex-m-rt = { version = "0.7.1" }
cortex-m-semihosting = { version = "0.5.0" }
panic-semihosting = { version = "0.6.0", features = ["exit"] }
cc2538-pac = { version = "0.4.0", features = ["rt"] }
cc2538-hal = "0.2.0"

# depend on an allocator
static-alloc = { version = "0.2.3", optional = true }
