[package]
name = "lakers-crypto-cryptocell310"
version.workspace = true
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license.workspace = true
description = "ARM CryptoCell 310 sys crate"
links = "nrf_cc310_0.9.13"
repository.workspace = true
readme.workspace = true

[dependencies]
lakers-shared.workspace = true

[build-dependencies]
bindgen = "0.69.1"
