[package]
name = "lakers-crypto-hacspec"
version.workspace = true
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license.workspace = true
description = "EDHOC crypto library hacspec backend"
repository.workspace = true
readme.workspace = true

[dependencies]
lakers-shared.workspace = true
hacspec-lib = { version = "0.1.0-beta.1", default-features = false }
hacspec-p256 = { version = "0.1.0" }
hacspec-hkdf = { version = "0.1.0" }
hacspec-sha256 = { version = "0.1.0" }
hacspec-aes = { version = "0.1.0" }
hacspec-aes-ccm = { version = "0.1.0" }
rand = "0.8.5"
