[package]
name = "lakers-crypto-psa"
version.workspace = true
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
license.workspace = true
description = "EDHOC crypto library PSA backend"
repository.workspace = true
readme.workspace = true

[dependencies]
lakers-shared.workspace = true
psa-crypto = { version = "0.9.2" }
bindgen = "=0.71.1" # force just to test

[features]
baremetal = [ "psa-crypto/baremetal" ]
