[package]
name = "lakers-crypto-psa"
version.workspace = true
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
license.workspace = true
description = "EDHOC crypto library PSA backend"
repository.workspace = true
readme.workspace = true

[dependencies]
digest = { version = "0.10.7", default-features = false }
lakers-shared.workspace = true
psa-crypto = { version = "0.9.2" }

[features]
baremetal = [ "psa-crypto/baremetal" ]
