[package]
name = "edhoc-ead-zeroconf"
version = "0.1.0"
edition = "2021"
authors = ["Geovane Fedrecheski <geonnave@gmail.com>"]
license = "BSD"
description = "EDHOC EAD zeroconf (draf-lake-authz)"

[dependencies]
edhoc-consts = { path = "../../consts" }
hacspec-lib = { version = "0.1.0-beta.1", default-features = false, optional = true }

[dev-dependencies]
edhoc-crypto = { path = "../../crypto", default-features = false }
hexlit = "0.5.3"

[features]
crypto-psa = [ "edhoc-crypto/psa" ]
crypto-hacspec = ["hacspec-lib/std", "edhoc-crypto/hacspec" ]
