[package]
name = "lakers-ead-zeroconf"
version.workspace = true
edition = "2021"
authors = ["Geovane Fedrecheski <geonnave@gmail.com>"]
license.workspace = true
description = "EDHOC EAD zeroconf (draf-lake-authz)"
repository.workspace = true

[dependencies]
edhoc-consts.workspace = true

[dev-dependencies]
edhoc-crypto.workspace = true
hexlit = "0.5.3"

[features]
crypto-psa = [ "edhoc-crypto/psa" ]
crypto-hacspec = [ "edhoc-crypto/hacspec" ]
