[package]
name = "lakers-ead-authz"
version.workspace = true
edition = "2021"
authors = ["Geovane Fedrecheski <geonnave@gmail.com>"]
license.workspace = true
description = "EDHOC EAD zero touch authorization for network join (draf-lake-authz)"
repository.workspace = true

[dependencies]
lakers-shared.workspace = true
defmt-or-log = { version = "0.2.1", default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
lakers-crypto.workspace = true
hexlit = "0.5.3"
